Project Component Lat layout

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
     <!-- Load Tableau Ext Lib -->
     <script src="https://raw.githack.com/tableau/extensions-api/master/lib/tableau-extensions-1.0.0.js"></script>
+
+    <!-- Load Window.Promise Ext Lib -->
+    <script src="https://raw.githack.com/amercier/promise-window/master/dist/promise-window.min.js"></script>
 </head>
 
 <body>
