--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 
     <!-- Load Window.Promise Ext Lib -->
     <script src="https://raw.githack.com/amercier/promise-window/master/dist/promise-window.min.js"></script>
+
+    <!-- Load AG-Grid CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ag-grid/19.1.4/styles/ag-grid.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ag-grid/19.1.4/styles/ag-theme-balham.css">
 </head>
 
 <body>
